# janus-plugin-rtmp

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac
docs/: api.md
src/: libjanus_rtmp.c  pipeline.c  pipeline.h
